# linearlab

./: LICENSE  README.md  pyproject.toml
example/: beta.ipynb  glm_bernoulli.ipynb  glm_binomial.ipynb  glm_gamma.ipynb  glm_poisson.ipynb  lm.ipynb
linearlab/: __init__.py  link.py  lm.py  optim.py  util.py
linearlab/lik/: __init__.py  _bernoulli.py  _beta.py  _binomial.py  _gamma.py  _normal.py  _poisson.py  base.py
linearlab/likelihood/: base.py  bernoulli.py  normal.py
linearlab/model/: glm.py  lm.py  reg.py
