[tool.poetry]
name = "linearlab"
version = "0.1.0"
description = ""
authors = ["Daniel Schulman <danieljschulman@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
numpy = "^1.25.2"
scipy = "^1.11.1"
pandas = "^2.0.3"
formulaic = "^0.6.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
